--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -3003,6 +3003,9 @@ and open the template in the editor.
             .file-name{
                 color: #3a773a;
                 font-size: 14px;
+                word-break: break-word;
+                text-align: left;
+                padding-right: 20px;
             }
         }
         .progress-status{
