--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -1,7 +1,7 @@
 <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
 <div class="search-interface-container">
   <div class="header_sec">
-    <div class="title">Search Interface</div>
+    <div class="title">Result Templates</div>
     <div class="btn_sec">     
       <button class="kr-sg-button-primary btn_lg d-none" (click)="openPreviewModal()">Preview</button>
     </div>
