--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -219,15 +219,6 @@
         <div class="modal-body">
           <div *ngIf="selectedSourceType" class="crerateWebCrawl" [ngClass]="{'pr-0': resourceIDToOpen}">
             <div class="crawl-form-title" *ngIf="!resourceIDToOpen"></div>
-            <div *ngIf= "(selectedSourceType.resourceType === 'webdomain')">
-              <div class="kr-sg-input-text mb-4">
-                <div class="label-text">Source URL</div>
-                <input type="text" id="extractUrl" autocomplete="off" name="url" (keyup)="urlChange()" (change)="urlChange()"
-                  [disabled]="fileObj.fileId || fileObj.fileName" placeholder="Enter Domain URL"
-                  [(ngModel)]="newSourceObj.url" class="input-text" (change)="inputChanged('extractURL')">
-                  <img id="infoWarning1" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
-              </div>
-            </div>
             <div class="kr-sg-input-text mb-4">
               <div class="label-text">Source Title</div>
               <input type="url" autocomplete="off" id="addSourceTitleInput" name="sourceTitle" placeholder="Enter Title"
@@ -281,7 +272,8 @@
                             <div class="imageDiv">
                               <img src="assets/images/source-icos/drog_frop.svg">
                             </div>
-                            <div class="info_text">Drag and drop a <b>pdf file</b> anywhere on this screen</div>
+                            <div class="info_text" *ngIf="(selectedSourceType.resourceType !='importfaq')">Drag and drop a <b>pdf file</b> anywhere on this screen</div>
+                            <div class="info_text" *ngIf="(selectedSourceType.resourceType ==='importfaq')">Drag and drop file anywhere in this section</div>
                             <div class="or-divider">- or -</div>
                             <div class="custom-file">
                               
