--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -118,7 +118,7 @@
                                 <div class="col-4 p-0 actions-sec">
                                     <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
                                         <div class="dropdown dropdown-open" [ngClass] = "{'disableDiv' : permisionView }"  (click) = "launch()">                                        
-                                            <button class="dropdown-toggle dropdown-input" ngbDropdownToggle  ngbTooltip='Launch query in customize mode' placement="top"><img class="cursor" src="assets/icons/play.svg"></button>                                            
+                                            <button class="dropdown-toggle dropdown-input" ngbDropdownToggle tooltipClass="test-icon-tooltip" ngbTooltip='Launch query in customize mode' placement="top"><img class="cursor" src="assets/icons/play.svg"></button>                                            
                                         </div>
                                     </div>
                                     <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
