--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -190,91 +190,27 @@
     </div>
     <perfect-scrollbar>
       <div class="modal-body">
-          <div class="payment-confiramtion-data">
+          <div class="payment-confiramtion-data d-none">
             <div class="img-block"><img src="assets/icons/pricing/payment-success.svg"></div>
             <div class="payment-success-message">
               <div class="title">Yay! Payment Successfull...</div>
               <button class="kr-sg-buttonicon-secondary btn_lg"><img src="assets/icons/pricing/download.svg">Download Invoice</button>
             </div>
           </div>
+          <div class="payment-confiramtion-data pl-0 pr-0 m-0 row pt-5">
+            <div class="img-block col-7 p-0"><img src="assets/icons/pricing/payment-failed.svg"></div>
+            <div class="payment-success-message col-5 p-0">
+              <div class="title">Oops! Payment Failed!!</div>
+              <button class="kr-sg-buttonicon-primary btn_lg">Retry Payment</button>
+            </div>
+          </div>
       </div>
     </perfect-scrollbar>
-    <div class="modal-footer text-right">
+    <!-- <div class="modal-footer text-right">
       <button class="kr-sg-button-primary btn_lg" (click)="closePopup2()">Done</button>     
-    </div>
+    </div> -->
 </kr-modal>
 <!--popup3-->
-
-<kr-modal modalType="center" modalClass="modal_popups_ chooseplan-price" #addPricingModel3>
-    <div class="modal-header">
-      <div class="title">Choose Plan</div>
-      <div class="d-flex align-items-center justify-content-end">
-        <div class="btn-monthly"  [ngClass]="{'active-btn' : termPlan == 'monthly'}" (click)="termPlan = 'monthly'">Monthly</div>
-        <div class="btn-monthly" [ngClass]="{ 'active-btn' : termPlan == 'annually' }" (click)="termPlan = 'annually'">Annually</div>
-        <div class="close_icon ml-4">
-          <img  (click)="closePopup3()" src="assets/icons/modal-close.svg">
-        </div>
-      </div>      
-    </div>
-    <perfect-scrollbar>
-      <div class="modal-body">
-        <div class="mian-title-desc">You can add maximum of 2 Business Rules in your current plan, Please Upgrade the plan to add more.</div>
-        <div class="upgrade-details-prices row col-12 p-0">          
-          <div class="col-4 upgrade-price-card current-plan">
-            <div class="inner-content">
-              <img src="assets/icons/pricing/standard.svg" class="standard-img">
-                <div class="title-sec">
-                  <div class="title">Standard</div>
-                  <div class="price d-none">$99 <span>/ month</span></div>
-                  <div class="current-plan-title"><img src="assets/icons/pricing/check-round.svg">Current Plan</div>
-                </div>
-                <div class="card-desc">10k Documents </div>
-                <div class="card-desc">50k Queries per month</div>
-                <div class="card-desc">Scheduled Crawling</div>
-                <div class="card-desc">Experiments</div>
-                <div class="card-desc">Community Support</div>
-                <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
-            </div>
-          </div>
-
-          <div class="col-4 upgrade-price-card">
-            <div class="inner-content">
-              <img src="assets/icons/pricing/pro.svg" class="pro-img">
-                <div class="title-sec">
-                  <div class="title">Pro</div>
-                  <div class="price">$399 <span>/ month</span></div>
-                </div>
-                <div class="card-desc">50k Documents  </div>
-                <div class="card-desc">100k Queries per month</div>
-                <div class="card-desc">Connectors & Unstructured content</div>
-                <div class="card-desc">Multiple indices</div>
-                <div class="card-desc">E-mail Support</div>
-                <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
-            </div>
-          </div>
-
-          <div class="col-4 upgrade-price-card custom_">
-            <div class="inner-content">
-              <img src="assets/icons/pricing/enterprise.svg" class="enterprise-img">
-              <div class="title-sec">
-                <div class="title">Enterprise</div>
-                <div class="custom-title">Custom</div>
-              </div>
-              <div class="card-desc">Any no. of documents </div>
-              <div class="card-desc">Any no. of documents</div>
-              <div class="card-desc">Custom SLAs</div>
-              <div class="custom-desc-text">Fully Customizable & Tailored Solution for your business needs</div>
-              <button class="kr-sg-button-secondary btn_lg">Contact US</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </perfect-scrollbar>
-    <div class="modal-footer text-right">
-      <button class="kr-sg-button-primary btn_lg mr-3">Proceed</button>
-      <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closePopup3()">Cancel</button>
-    </div>
-</kr-modal>
 
 <kr-modal modalType="center" modalClass="modal_popups_ overage_plan" #addPricingModel4>
   <div class="modal-header">
@@ -340,40 +276,48 @@
   </div>
   <perfect-scrollbar>
     <div class="modal-body">
-      <div class="mian-title-desc">Your request for cancellation has been successfully submitted. Subscription is valid till the end of billing cycle i.e. s <span>24 Nov 2021</span></div>
-        <div class="cancel-subscription-data row m-0">
-          <div class="img-block col-8"><img src="assets/icons/pricing/cancel_subscription.svg"></div>
-          <div class="cancel-subscription-reasons col-4 p-0">
-            <div class="group-checkbox">
-              <div class="heading-title">What is the Reason you want to Cancel?</div>
-              <div class="kr-sg-checkbox d-block">
-                  <input id="checkbox_grp3" class="checkbox-custom" type="checkbox">
-                  <label for="checkbox_grp3" class="checkbox-custom-label">It’s too costly</label>
-              </div>
-              <div class="kr-sg-checkbox d-block">
-                  <input id="checkbox_grp4" class="checkbox-custom" type="checkbox">
-                  <label for="checkbox_grp4" class="checkbox-custom-label">I don’t use it enough</label>
-              </div>
-              <div class="kr-sg-checkbox d-block">
-                  <input id="checkbox_grp5" class="checkbox-custom" type="checkbox">
-                  <label for="checkbox_grp5" class="checkbox-custom-label">I don’t need it now</label>
-              </div>
-              <div class="kr-sg-checkbox d-block">
-                <input id="checkbox_grp15" class="checkbox-custom" type="checkbox">
-                <label for="checkbox_grp15" class="checkbox-custom-label">Other</label>
-              </div>              
+      <ul class="cancel-subscription-list">
+        <li>Your subscription is valid till the end of billing cycle i.e.  <span>24 Nov 2021</span>.</li>
+        <li>Post billing cycle your app will not respond to the end users.</li>
+        <li>However, you will have access to your app for 15 more days after cancellation to either reactivate or take a backup of your application. After 15 days your app will be permanently deleted.</li>
+      </ul>      
+      <div class="cancel-subscription-data row m-0">
+        <div class="img-block col-8"><img src="assets/icons/pricing/cancel_subscription.svg"></div>
+        <div class="cancel-subscription-reasons col-4 p-0">
+          <div class="group-checkbox">
+            <div class="heading-title">What is the Reason you want to Cancel?</div>
+            <div class="kr-sg-checkbox d-block">
+                <input id="checkbox_grp3" class="checkbox-custom" type="checkbox">
+                <label for="checkbox_grp3" class="checkbox-custom-label">It’s too costly</label>
             </div>
-            <div class="kr-sg-input-text-area">
-              <div class="label-text">Comments</div>
-              <textarea placeholder="Optional" class="input-text"></textarea>                                
+            <div class="kr-sg-checkbox d-block">
+              <input id="checkbox_grp1" class="checkbox-custom" type="checkbox">
+              <label for="checkbox_grp1" class="checkbox-custom-label">I found another product that fulfils my needs</label>
             </div>
+            <div class="kr-sg-checkbox d-block">
+                <input id="checkbox_grp4" class="checkbox-custom" type="checkbox">
+                <label for="checkbox_grp4" class="checkbox-custom-label">I don’t use it enough</label>
+            </div>
+            <div class="kr-sg-checkbox d-block">
+                <input id="checkbox_grp5" class="checkbox-custom" type="checkbox">
+                <label for="checkbox_grp5" class="checkbox-custom-label">I don’t need it now</label>
+            </div>
+            <div class="kr-sg-checkbox d-block">
+              <input id="checkbox_grp15" class="checkbox-custom" type="checkbox">
+              <label for="checkbox_grp15" class="checkbox-custom-label">Other</label>
+            </div>              
+          </div>
+          <div class="kr-sg-input-text-area">
+            <div class="label-text">Comments</div>
+            <textarea placeholder="Optional" class="input-text"></textarea>                                
           </div>
         </div>
+      </div>
     </div>
   </perfect-scrollbar>
   <div class="modal-footer text-right">    
-    <button class="kr-sg-button-primary btn_lg">Proceed</button>     
-    <button class="kr-sg-button-secondary btn_lg" (click)="closePopup5()">Cancel</button>
+    <button class="kr-sg-button-primary btn_lg" (click)="closePopup5()">Cancel Subscription</button>     
+    <button class="kr-sg-button-secondary btn_lg">Later</button>
   </div>
 </kr-modal>
 
