--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1749,7 +1749,7 @@ float: right;
   z-index: 9999 !important;
   left: 0;
   right: 0;
-  padding-left: 245px;
+  /* padding-left: 245px; */
 }
 
 .top-down-search-background-div.if-full-results{
@@ -1761,7 +1761,7 @@ float: right;
 .top-down-search-background-div::after{
   position: absolute;
   content: "";
-  background: #fff;
+  /* background: #fff; */
   height: 100%;
   width: 245px;
   left: 0;
@@ -2127,4 +2127,25 @@ display: none !important;
     color: #202124;
     font-weight: 500;
     font-size: 12px;
+}
+
+.search-greeting-box-top-down .greeting-img {
+    position: relative;
+    top: 3px;
+    margin-right: 6px;
+    
+}
+
+.search-greeting-box-top-down .greeting-img img {
+  width: 22px;
+}
+.search-greeting-box-top-down {
+    background: #fff;
+    border: 1px solid #E0E1E9;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin-top: 12px;
+    height: auto;
+    padding: 14px 12px;
+    width: 347px;
 }
