showing search assist and retry query hide in preview window code changes for top down

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2149,3 +2149,7 @@ display: none !important;
     padding: 14px 12px;
     width: 347px;
 }
+
+.topdown-search-main-container .all-result-container .conversation-container .conversations .search-container.conversation #searchChatContainer .sdk-query-retry-icon{
+  display: none !important;
+}
