--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -30,14 +30,16 @@
                         </div>   
                     </div>
                     <div class="right-sec">
-                        <div class="search-preview-dummy">
+                        <!-- <div class="search-preview-dummy">
                             <div class="top-search" [ngClass]="{'bottom-search': searchObject.searchExperienceConfig.searchBarPosition == 'bottom'}">
                                 <div class="kr-sg-input-search">                               
                                     <input type="text" placeholder="Search" class="input-search" id="myInput">
                                     <img src="assets/icons/search_gray.svg" class="search-icon">
                                 </div>
                             </div>                                                 
-                        </div>
+                        </div> -->
+                        <img src="assets/icons/search-experience/top-down.svg" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'top'">
+                        <img src="assets/icons/search-experience/bottom-up.svg" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
                     </div>
                 </div>
             </div>
@@ -346,10 +348,10 @@
                     </div>
                 </div>         
             </div>
-            <div class="container" *ngSwitchCase="'interactions'">
+            <div class="col-12 pr-0" *ngSwitchCase="'interactions'">
                 <div class="interactins-content col-12 p-0 row m-0">
-                    <div class="left-sec col-7">
-                        <div class="greeting-message border-with-padding">
+                    <div class="left-sec col-12 p-0">
+                        <div class="greeting-message border-with-padding col-7">
                             <div class="kr-sg-input-text-area">
                                 <div class="label-text">Customize Launch Greeting Message</div>
                                 <textarea class="input-text" maxlength="40" #box (keyup)="0" [(ngModel)]="searchObject.searchInteractionsConfig.welcomeMsg" [ngStyle]="{'color':searchObject.searchInteractionsConfig.welcomeMsgColor}"></textarea>                                
@@ -392,56 +394,64 @@
                                 <div class="count-length">{{box.value.length}} / 40</div>
                             </div>
                         </div>
-                        <div class="border-with-padding">
-                            <div class="heading-title">Show Searches</div>
-                            <label class="kr-sg-toggle">                                       
-                                <input type="checkbox" [(ngModel)]="searchObject.searchInteractionsConfig.showSearchesEnabled">
-                                <div class="slider"><span class="enabled">Yes</span><span class="disabled">No</span></div>
-                            </label>
-                       
-                            <div class="group-radiobutton mt-3">
-                                <div class="kr-sg-radiobutton">
-                                    <input id="radio-22" name="radio" class="radio-custom" type="radio" value="frequent" [checked]="searchObject.searchInteractionsConfig.showSearches=='Frequent'" [(ngModel)]="searchObject.searchInteractionsConfig.showSearches" [disabled]="!searchObject.searchInteractionsConfig.showSearchesEnabled">
-                                    <label for="radio-22" class="radio-custom-label">Frequent</label>
+                        <div class="col-12 p-0 position-relative">
+                            <div class="guide-button-info">
+                                <div class="title-text">Not Sure! What you can do with these interaction settings?</div>
+                                <div class="guide-btn">
+                                    <img src="assets/icons/search-experience/guide/help.svg">
+                                    <span class="choose-guide" (click)="openSearchInterfaceGuide()">Let us help you choose</span>
                                 </div>
-                                <div class="kr-sg-radiobutton">
-                                    <input id="radio-23" name="radio" class="radio-custom" type="radio" value="recent" [checked]="searchObject.searchInteractionsConfig.showSearches=='recent'" [(ngModel)]="searchObject.searchInteractionsConfig.showSearches" [disabled]="!searchObject.searchInteractionsConfig.showSearchesEnabled">
-                                    <label for="radio-23" class="radio-custom-label">Recent</label>
-                                </div>
-                            </div>                            
-                        </div>
-                        <div class="border-with-padding">                                                                     
-                            <div class="label_text">Autocomplete</div>
-                            <label class="kr-sg-toggle">                                       
-                                <input type="checkbox" [(ngModel)]="searchObject.searchInteractionsConfig.autocompleteOpt">
-                                <div class="slider"><span class="enabled">Yes</span><span class="disabled">No</span></div>
-                            </label>
-                        </div>
-                        <div class="border-with-padding" *ngFor="let data of suggestions"> 
-                            <!-- <ng-container *ngFor="let num of data.numbers;let i=index;">
-                                <span  [ngStyle]="{'margin-right':num+'px'}">{{num}}&nbsp;&nbsp;</span></ng-container >                                                                     -->
-                            <div class="label_text">{{data.name}}</div>
-                            <div class="kr-sg-toggle sliderContainer">  
-                                <div class="range-slider">
-                                <app-range-slider-search-experience [customClass]='"querySlider"' [allData]='data.sliderObj' (valueEvent)="valueEvent(data.name,$event)"></app-range-slider-search-experience>
-                            </div></div>
-                        </div>
-
-                        <div class="border-with-padding group-checkbox">
-                            <div class="heading-title">Feedback Experience </div>
-                            <div class="kr-sg-checkbox">
-                                <input id="checkbox_grpb" class="checkbox-custom" type="checkbox" [checked]="searchObject.searchInteractionsConfig.feedbackExperience.resultLevel" [(ngModel)]="searchObject.searchInteractionsConfig.feedbackExperience.resultLevel">
-                                <label for="checkbox_grpb" class="checkbox-custom-label">Result Level</label>
                             </div>
-                            <!-- <div class="kr-sg-checkbox">
-                                <input id="checkbox_grpc" class="checkbox-custom" type="checkbox" disabled>
-                                <label for="checkbox_grpc" class="checkbox-custom-label">Query Level</label>
-                            </div> -->
-                        </div>
-                    </div>
-                    <div class="right-sec col-5">
+                            <div class="col-7 p-0">                            
+                                <div class="border-with-padding">
+                                    <div class="label_text">Show Searches</div>
+                                    <label class="kr-sg-toggle">                                       
+                                        <input type="checkbox" [(ngModel)]="searchObject.searchInteractionsConfig.showSearchesEnabled">
+                                        <div class="slider"><span class="enabled">Yes</span><span class="disabled">No</span></div>
+                                    </label>
+                               
+                                    <div class="group-radiobutton mt-3">
+                                        <div class="kr-sg-radiobutton">
+                                            <input id="radio-22" name="radio" class="radio-custom" type="radio" value="frequent" [checked]="searchObject.searchInteractionsConfig.showSearches=='Frequent'" [(ngModel)]="searchObject.searchInteractionsConfig.showSearches" [disabled]="!searchObject.searchInteractionsConfig.showSearchesEnabled">
+                                            <label for="radio-22" class="radio-custom-label">Frequent</label>
+                                        </div>
+                                        <div class="kr-sg-radiobutton">
+                                            <input id="radio-23" name="radio" class="radio-custom" type="radio" value="recent" [checked]="searchObject.searchInteractionsConfig.showSearches=='recent'" [(ngModel)]="searchObject.searchInteractionsConfig.showSearches" [disabled]="!searchObject.searchInteractionsConfig.showSearchesEnabled">
+                                            <label for="radio-23" class="radio-custom-label">Recent</label>
+                                        </div>
+                                    </div>                                                          
+                                </div>
+                                <div class="border-with-padding">                                                                     
+                                    <div class="label_text">Autocomplete</div>
+                                    <label class="kr-sg-toggle">                                       
+                                        <input type="checkbox" [(ngModel)]="searchObject.searchInteractionsConfig.autocompleteOpt">
+                                        <div class="slider"><span class="enabled">Yes</span><span class="disabled">No</span></div>
+                                    </label>
+                                </div>
+                                <div class="border-with-padding" *ngFor="let data of suggestions">                                    
+                                    <div class="label_text">{{data.name}}</div>
+                                    <div class="range-slider">
+                                        <app-range-slider-search-experience [customClass]='"querySlider"' [allData]='data.sliderObj' (valueEvent)="valueEvent(data.name,$event)"></app-range-slider-search-experience>
+                                    </div>
+                                </div>
+        
+                                <div class="border-with-padding group-checkbox">
+                                    <div class="heading-title">Feedback Experience </div>
+                                    <div class="kr-sg-checkbox">
+                                        <input id="checkbox_grpb" class="checkbox-custom" type="checkbox" [checked]="searchObject.searchInteractionsConfig.feedbackExperience.resultLevel" [(ngModel)]="searchObject.searchInteractionsConfig.feedbackExperience.resultLevel">
+                                        <label for="checkbox_grpb" class="checkbox-custom-label">Result Level</label>
+                                    </div>
+                                    <!-- <div class="kr-sg-checkbox">
+                                        <input id="checkbox_grpc" class="checkbox-custom" type="checkbox" disabled>
+                                        <label for="checkbox_grpc" class="checkbox-custom-label">Query Level</label>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>                        
+                    </div>                    
+                    <!-- <div class="right-sec col-5">
                         <button class="btn kr-sg-button-primary" (click)="openSearchInterfaceGuide()">Open Guide</button>
-                    </div>
+                    </div> -->
                     <!-- <div class="right-sec col-5">
                         <div class="preview-interactions">
                             <div class="label_text">Preview</div>
@@ -498,17 +508,90 @@
   </div>
 </kr-modal>
 
-<kr-modal  modalType="center" modalClass="sliderComponent modal_popups_ search-customization-popup-preview" #guideModalPop id="guideModalPop">
+<kr-modal  modalType="center" modalClass="sliderComponent modal_popups_ guide-seach-experience" #guideModalPop id="guideModalPop">
     <div class="modal-header">
-      <div class="title">Modal header</div>
+      <div class="title">Guide > <span>Bottom Up Experience</span></div>
       <div class="close_icon" (click)="closeGuidePopup()"><img  src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
       <div class="modal-body">
-          Modal body
+        <div class="main-title">Hi Ankit,</div>
+        <div class="main-title">It is recommended to go through this guide before customizing interactions.</div>
+        <div class="guide-data">
+            <div class="layer-img">
+                <img src="assets/icons/search-experience/guide/sdk-img.svg">
+            </div>
+            <div class="left-content">
+                <img src="assets/icons/search-experience/guide/recent-search.svg">
+            </div>
+            <div class="right-content">
+                <div class="title">Choose <span class="hilightedcolor">Frequent Search</span> or <span class="hilightedcolor">Recent Search</span></div>
+                <div class="desc-text">to enable the user to see their Frequently or recently searched queries. These queries will appear as cards in the search window as soon as the user puts their cursor in the search bar </div>
+            </div>
+        </div>
+
+        <div class="autocomplete-guide">
+            <div class="layer-img">
+                <img src="assets/icons/search-experience/guide/sdk-automatic.svg">
+            </div>
+            <div class="left-content">
+                <div class="title"><span class="hilightedcolor">Autocomplete</span></div>
+                <div class="desc-text">Saves the time and effort for the users by predicting the rest of the word as the user is typing</div>
+            </div>
+            <div class="right-content">
+                <img src="assets/icons/search-experience/guide/autocomplete.svg">
+            </div>
+        </div>
+
+        <div class="query-sugestion-guide">
+            <div class="layer-img">
+                <img src="assets/icons/search-experience/guide/suggestion-sdk.svg">
+            </div>
+            <div class="left-content">
+                <img src="assets/icons/search-experience/guide/querysuggestion.svg">
+            </div>
+            <div class="right-content">
+                <div class="title"><span class="hilightedcolor">Query Suggestions</span></div>
+                <div class="desc-text">reduces user’s time to search a query by providing suggestions which help users to enter long queries or select a query as they type.</div>
+                <div class="info-text">Here, the no. of <span>query suggestions</span> are <span>set to two</span> and <span>Live search</span> is <span>set to zero</span></div>
+            </div>
+        </div>
+
+
+        <div class="livesearch-guide">
+            <div class="layer-img">
+                <img src="assets/icons/search-experience/guide/live-search-sdk.svg">
+            </div>
+            <div class="left-content">
+                <div class="title"><span class="hilightedcolor">Live Search</span></div>
+                <div class="desc-text">enhances user’s search experience by showing the results while entering the query and allows the user to see search results without needing to redirect to the results page</div>
+                <div class="info-text">Here, the no. of <span>query suggestions</span> are <span>set to zero</span></div>
+            </div>
+            <div class="right-content">
+                <img src="assets/icons/search-experience/guide/livesearch-suggestion.svg">
+            </div>
+        </div>
+
+
+        <div class="live-search-sugg-guide-data">
+            <div class="layer-img">
+                <img src="assets/icons/search-experience/guide/liveasech-query.svg">
+            </div>
+            <div class="left-content">
+                <img src="assets/icons/search-experience/guide/livesearch-suggestion.svg">
+            </div>
+            <div class="right-content">
+                <div class="title"><span class="hilightedcolor">Live Search & Query Suggestions</span></div>
+                <div class="desc-text">when both are enabled the live search results appear at the background of the query suggestions and the user can scroll to browse the results.</div>
+                <div class="info-text">Here, the no. of <span>query suggestions</span> and <span>live search</span>, both are enabled and <span>set to three</span></div>
+            </div>
+        </div>
+
+        <div class="done-all">
+            <img src="assets/icons/search-experience/guide/handthumb.svg">
+            <span class="title">That’s all, Let’s Customize now.</span>
+        </div>
+
       </div>
     </perfect-scrollbar>
-    <div class="modal-footer">
-      
-    </div>
   </kr-modal> 
