--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13267,6 +13267,9 @@ padding-right: 0;
 
 .structured-data-outer-wrap{
     margin-bottom: 23px;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
 }
 .structured-data-outer-wrap.panel.with-accordion{
     
