Added Dynamic User Name in Guide Modal.

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -596,7 +596,7 @@
 
 
       <div class="modal-body topdown-guide" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'top'">
-        <div class="main-title">Hi Ankit,</div>
+        <div class="main-title">Hi {{userName}},</div>
         <div class="main-title">It is recommended to go through this guide before customizing interactions.</div>
         <div class="guide-data">
             <div class="layer-img">
